--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finny-commission-bot",
+  "name": "finny-commission-dashboard",
   "version": "1.0.0",
   "private": true,
   "scripts": {
