--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "finny-commission-dashboard",
-  "version": "2.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.3.0",
-    "typescript": "^5.4.0"
-  }
+    "name": "finny-commission-dashboard",
+    "version": "2.0.0",
+    "private": true,
+    "scripts": {
+          "dev": "next dev",
+          "build": "next build",
+          "start": "next start"
+    },
+    "dependencies": {
+          "@supabase/ssr": "^0.5.2",
+          "@supabase/supabase-js": "^2.47.0",
+          "next": "^14.2.0",
+          "react": "^18.3.0",
+          "react-dom": "^18.3.0"
+    },
+    "devDependencies": {
+          "@types/node": "^20.0.0",
+          "@types/react": "^18.3.0",
+          "typescript": "^5.4.0"
+    }
 }
